<resources>
    <string name="app_name">Matchid</string>
    <string name="matchid_name">MatchID</string>
    <string name="matchid_subtekst">Metrology beyond colors</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">Matchid</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="quit_app">Quit application?</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>


    <string name="title_activity_main">Home</string>
    <string name="add_from_camera">From Camera</string>
    <string name="add_from_gallery">From Gallery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account_settings">Account</string>

    <string name="title_activity_user_info">userinfo</string>
    <string name="edit">edit</string>
    <string name="logout">Logout</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_picture">Select a picture</string>
    <string name="upload_picture">Upload a picture</string>
</resources>
